# ai-vault

./: .gitignore  LICENSE  README.md  pyproject.toml
ai_vault/: __init__.py  db.py  encryption.py  main.py  settings.py
ai_vault/api/: activity.py  approvals.py  overview.py  resources.py  router.py  rules.py  schemas.py
ai_vault/cli/: commands.py  main.py
ai_vault/mcp_client/: manager.py
ai_vault/mcp_server/: server.py  tools.py
ai_vault/models/: __init__.py  access_rule.py  activity_log.py  approval_request.py  base.py  resource.py
ai_vault/policy/: engine.py  types.py
tests/: conftest.py  test_api.py  test_cli.py  test_encryption.py  test_mcp_client_manager.py  test_mcp_tools.py  test_models.py  test_policy_engine.py  test_vault_call_tool.py
ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.css
ui/src/lib/api/: client.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/activity/: +page.svelte
ui/src/routes/approvals/: +page.svelte
ui/src/routes/resources/: +page.svelte
